--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,16 @@
 version: '3.7'
 services:
   server:
+    environment: 
+      - "bucket=ancillary-reconciliation"
+      - "db_host="
+      - "db_name="
+      - "db_user="
+      - "db_password="
     build:
       context: .
       dockerfile: Dockerfile
     command: tail -f /dev/null
     volumes:
       - .:/app
+      - ~/.aws:/root/.aws
