--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "db_name="
       - "db_user="
       - "db_password="
+      - "QUEUE_NAME=ltc-ancillary-reconciliation.fifo"
     build:
       context: .
       dockerfile: Dockerfile
