more env vars in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - "db_user="
       - "db_password="
       - "QUEUE_NAME=ltc-ancillary-reconciliation.fifo"
+      - "FROM_EMAIL="
+      - "TO_EMAIL="
     build:
       context: .
       dockerfile: Dockerfile
